import java.io.BufferedReader;
import java.io.InputStreamReader;
import java.util.StringTokenizer;

public class Parser {

  private CommandWords commands;

  public Parser() {
    commands = new  CommandWords();
  }

  public Command getCommand() {
    String inputLine = "";
    String word1;
    String word2;

    System.out.print("> ");
    BufferedReader reader = new BufferedReader(new InputStreamReader(System.in));

    try {
      inputLine = reader.readLine();
    } catch (java.io.IOException exc) {
      System.out.println("There was an error during reading: " + exc.getMessage());
    }

    StringTokenizer token = new StringTokenizer(inputLine);

    if(token.hasMoreTokens()) {
      word1 = token.nextToken();
    } else {
      word1 = null;
    }

    if(token.hasMoreTokens()) {
      word2 = token.nextToken();
    } else {
      word2 = null;
    }

    if(commands.isCommand((word1))) {
      return new Command(word1, word2);
    }

    return new Command(word1, word2);
  }
}